tests/ui/pub/pub-ident-fn-or-struct-2.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-fn-or-struct-2.rs:1:4
   |
LL | pub S();
   |    ^
   |
help: add `struct` here to parse `S` as a public struct
   |
LL | pub struct S();
   |     ++++++

error: aborting due to previous error

